--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": ["trybe-frontend"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "sourceType": "module"
-  }
+    "extends": "airbnb"
 }
