--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "acorn": "^8.8.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
-    "react": "^16.13.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^5.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -53,7 +53,6 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "stylelint": "13.8.0",
-    "stylelint-order": "4.1.0"
+    "stylelint": "^15.6.2"
   }
 }
